--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -40,14 +40,15 @@ html, body
       color: #c4c4c4
 
 .modal-container.show
+  pointer-events: all
   opacity: 1
 
   .modal-view
-    pointer-events: all
-    transform: scale(1)
+    transform: translateY(0)
 
 .modal-container
   pointer-events: none
+  overflow: hidden
   opacity: 0
   position: absolute
   top: 0
@@ -58,15 +59,15 @@ html, body
   transition: all 100ms cubic-bezier(1,-0.04, 0, 0.95)
 
   .modal-view
-    transform: scale(0)
-    transform-origin: top
+    transform: translateY(-100%)
+    transform-origin: center
     width: 50vw
     height: 50vh
     background-color: #ffffff
     box-shadow: 5px 5px 20px #101010
     overflow: hidden
     position: relative
-    transition: all 300ms cubic-bezier(0.42, 0, 0.51, 1.3) 100ms
+    transition: all 250ms cubic-bezier(0.42, 0, 0.51, 1.25)
 
     .login
       form#login-form
