--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -41,7 +41,7 @@ html, body {
   opacity: 1; }
   .modal-container.show .modal-view {
     pointer-events: all;
-    transform: scale(1); }
+    transform: translateY(0); }
 
 .modal-container {
   pointer-events: none;
@@ -54,15 +54,15 @@ html, body {
   background-color: rgba(32, 32, 32, 0.95);
   transition: all 100ms cubic-bezier(1, -0.04, 0, 0.95); }
   .modal-container .modal-view {
-    transform: scale(0);
-    transform-origin: top;
+    transform: translate(-100%);
+    transform-origin: center;
     width: 50vw;
     height: 50vh;
     background-color: #ffffff;
     box-shadow: 5px 5px 20px #101010;
     overflow: hidden;
     position: relative;
-    transition: all 300ms cubic-bezier(0.42, 0, 0.51, 1.3) 100ms; }
+    transition: all 300ms cubic-bezier(0.42, 0, 0.51, 1.25) 100ms; }
     .modal-container .modal-view .login form#login-form {
       flex-direction: column; }
       .modal-container .modal-view .login form#login-form input {
