--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -58,7 +58,7 @@ html, body
   transition: all 100ms cubic-bezier(1,-0.04, 0, 0.95)
 
   .modal-view
-    transform: translate(-100%)
+    transform: translateY(-100%)
     transform-origin: center
     width: 50vw
     height: 50vh
