--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -54,7 +54,7 @@ html, body {
   background-color: rgba(32, 32, 32, 0.95);
   transition: all 100ms cubic-bezier(1, -0.04, 0, 0.95); }
   .modal-container .modal-view {
-    transform: translate(-100%);
+    transform: translateY(-100%);
     transform-origin: center;
     width: 50vw;
     height: 50vh;
