--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -65,7 +65,7 @@ html, body {
     overflow: hidden;
     position: relative;
     transition: all 250ms cubic-bezier(0.42, 0, 0.51, 1.25);
-    transition: all 300ms cubic-bezier(0.42, 0, 0.51, 1.25) 100ms; }
+    transition: all 300ms cubic-bezier(0.42, 0, 0.51, 1.25); }
     .modal-container .modal-view .login form#login-form {
       flex-direction: column; }
       .modal-container .modal-view .login form#login-form input {
