Changed close button

--- a/_jade/index.jade
+++ b/_jade/index.jade
@@ -13,7 +13,8 @@ html(lang="en")
     
     .modal-container.center
       .modal-view.center
-        span.close
+        .close-container
+          span.close
         .login
           form.center(id="login-form")
             input(type="email", placeholder="Email Address")
