--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -93,21 +93,27 @@ html, body {
         margin: 10px 0;
         width: 400px;
         height: 40px; }
-    .modal-container .modal-view span.close {
+    .modal-container .modal-view .close-container {
+      width: 50px;
+      height: 50px;
+      cursor: pointer;
       position: absolute;
       top: 0;
-      right: 0;
-      margin: 20px 10px;
-      cursor: pointer; }
-    .modal-container .modal-view span.close:after,
-    .modal-container .modal-view span.close:before {
-      content: "";
-      display: block;
-      height: 1px;
-      width: 25px;
-      background-color: #202020;
-      transform-origin: center; }
-    .modal-container .modal-view span.close:after {
-      transform: rotate(45deg); }
-    .modal-container .modal-view span.close:before {
-      transform: rotate(-45deg); }
+      right: 0; }
+      .modal-container .modal-view .close-container span.close {
+        position: absolute;
+        top: 0;
+        right: 0;
+        margin: 20px 10px; }
+      .modal-container .modal-view .close-container span.close:after,
+      .modal-container .modal-view .close-container span.close:before {
+        content: "";
+        display: block;
+        height: 1px;
+        width: 25px;
+        background-color: #202020;
+        transform-origin: center; }
+      .modal-container .modal-view .close-container span.close:after {
+        transform: rotate(45deg); }
+      .modal-container .modal-view .close-container span.close:before {
+        transform: rotate(-45deg); }
